--- a/Js_remote.conf
+++ b/Js_remote.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog.csdn.net, *.openinstall.io, www.helloshiyu.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog.csdn.net, *.openinstall.io, buy.itunes.apple.com, api.smzdm.com, *.douban.com, *.doubanio.com, m.client.10010.com, mps.95508.com/mps/club/cardPortals/adv, mlife.cmbchina.com, pic1cdn.cmbchina.com, resource.cmbchina.com, v.icbc.com.cn/userfiles/Resources/WAP/advertisement, mlife.jf365.boc.cn, ss0.bdstatic.com, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, *.meituan.net, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, acs.m.taobao.com, guide-acs.m.taobao.com, adse.ximalaya.com, fdfs.xmcdn.com, fuss10.elemecdn.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com, *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, *.ykimg.com, *.elecfans.com, api.gotokeep.com, mapi.weibo.com, *.uve.weibo.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, mp.weixin.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, ap?.bilibili.com, *.amemv.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net,r.inews.qq.com, ios.prod.ftl.netflix.com, api.adguard.com, *.googleapis.com, *.youtube.com, *.googlevideo.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # For personal use only
 
@@ -22,10 +22,9 @@ hostname = api.weibo.cn,  link.jianshu.com, www.jianshu.com, link.csdn.net, blog
 ^https?://link\.csdn\.net/api/v1/link/check\?url=(.*) url 302 $1
 
 # iTunes_verify_receipt
-# buy.itunes.apple.com
-#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
 
-# Ads Block
+# SMZDM Ads Block
 ^https?:\/\/api\.smzdm\.com\/v\d\/util\/loading url reject-img
 ^https?:\/\/api\.smzdm\.com\/v2\/util\/banner url reject-img
 
