--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,4 +1,4 @@
-hostname = app.bilibili.com, grpc.biliapi.net, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, afd.baidu.com, api-163.biliapi.net/cove, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, *.douban.com, *.doubanio.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
+hostname = app.bilibili.com, grpc.biliapi.net, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, afd.baidu.com, api-163.biliapi.net/cove, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
 
 # bilibili去广告(iOS15)
 # 开屏页广告,推荐页广告,动态(推荐话题和列表广告),视频播放页面(up主推荐广告,相关推荐广告)
@@ -233,6 +233,7 @@ https://zhuanlan\.zhihu\.com/api/articles/\d+/recommendation url reject-200
 
 # 豆瓣 Ads （还有点问题……暂时停用）
 # (154.8.131.* 疑似自签证书不可验证)
+# *.douban.com, *.doubanio.com
 # ^https?:\/\/api\.douban\.com\/v2\/app_ads\/common_ads url reject-img
 # ^https?:\/\/frodo\.douban\.com\/api\/v2\/movie\/banner url reject-img
 # ^https?:\/\/img\d\.doubanio\.com\/view\/dale-online\/dale_ad\/ url reject-img
